# chtext

./: .gitignore  LICENSE  README.md  config_example.json  main.py  pyproject.toml  requirements.txt  seen_ids.sqlite  test_cli.sh
.github/workflows/: python-publish.yml
src/chtext/: __init__.py  __main__.py  cli.py
