[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chtext"
version = "1.0.0"
description = "Command-line tool for retrieving and translating short quotes from classical Chinese texts via the Chinese Text Project (ctext.org) API."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "3D3Q3" },
]
keywords = ["chinese", "classical", "quotes", "ctext", "translation", "philosophy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Text Processing",
]
dependencies = [
    "requests>=2.28.0",
    "deep-translator>=1.11.0",
]

[project.urls]
Homepage = "https://3D3Q3.3ll3.org/chtext"
Repository = "https://github.com/3D3Q3/chtext"
Issues = "https://github.com/3D3Q3/chtext/issues"

[project.scripts]
chtext = "chtext.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
